@startuml

!define TABLE(name) class name << (T,#FFAAAA) >>
!define PRIMARY_KEY(field) field << PK >>
!define FOREIGN_KEY(field) field << FK >>

skinparam class {
    BackgroundColor #f7f4eb
    BorderColor Black
}

skinparam classAttribute {
    BackgroundColor #f7f4eb
    BorderColor Black
}

Database "MySQL" as BoundedContextMySQL #f29111 {

    TABLE(customers) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(user_id) VARCHAR(36) UNIQUE NOT NULL
        first_name VARCHAR(255) NOT NULL,
        last_name VARCHAR(255) NULL,
        profile_picture_url VARCHAR(255) NULL,
        email VARCHAR(255) UNIQUE NULL,
        phone_number VARCHAR(15) NULL,
        street_address VARCHAR(255) NULL,
        city VARCHAR(255) NULL,
        country VARCHAR(255) NULL,
        postal_code VARCHAR(10) NULL
    }

    TABLE(trucks) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(vin) VARCHAR(17) UNIQUE NOT NULL
        capacity DOUBLE
    }

    TABLE(addresses) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(address_id) VARCHAR(36) UNIQUE NOT NULL
        street_address VARCHAR(255) NOT NULL,
        city VARCHAR(255) NOT NULL,
        country VARCHAR(255) NOT NULL,
        postal_code VARCHAR(10) NOT NULL
    }
      TABLE(shipments) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(shipment_id) VARCHAR(36) UNIQUE
        status VARCHAR(255),    
        expected_moving_date Date,
        actual_moving_date Date NULL,
        name VARCHAR(255),
        approximate_weight DOUBLE NULL,
        weight DOUBLE NULL,
        email VARCHAR(255) NULL,
        phone_number VARCHAR(15) NULL,
        FOREIGN KEY (pickup_address_id) VARCHAR(36),
        FOREIGN KEY (destination_address_id) VARCHAR(36),
        FOREIGN KEY (vin) VARCHAR(17) NULL,
        FOREIGN KEY (user_id) VARCHAR(36) NULL
    }

    TABLE(inventories) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(inventory_id) VARCHAR(36) UNIQUE NOT NULL
        description VARCHAR(255)
        FOREIGN_KEY(shipment_id) VARCHAR(36)
    }

    TABLE(items) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(item_id) VARCHAR(36) UNIQUE NOT NULL
        name VARCHAR(255) NOT NULL
        type ENUM('ITEM', 'BOX') NOT NULL
        price DECIMAL(10, 2)
        description VARCHAR(255)
        weight DOUBLE NULL
        handlingInstructions VARCHAR(255)
        FOREIGN_KEY(inventory_id) VARCHAR(36)
    }

    ' TABLE(MovingEstimator) {
    '     PRIMARY_KEY(id) INT AUTO_INCREMENT
    '     FOREIGN_KEY(estimator_id) VARCHAR(36) UNIQUE NOT NULL
    '     firstName VARCHAR(255)
    '     lastName VARCHAR(255)
    '     email VARCHAR(255) UNIQUE
    '     phoneNumber VARCHAR(15)
    '     FOREIGN_KEY(shipment_id) VARCHAR(36)
    ' }

    TABLE(quotes) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(quote_id) VARCHAR(36) UNIQUE NOT NULL
        pickup_street_address VARCHAR(255),
        pickup_city VARCHAR(255),
        pickup_country VARCHAR(255),
        pickup_postal_code VARCHAR(10),
        pickup_number_of_rooms INT,
        pickup_elevator BOOLEAN,
        pickup_building_type VARCHAR(255),
        destination_street_address VARCHAR(255),
        destination_city VARCHAR(255),
        destination_country VARCHAR(255),
        destination_postal_code VARCHAR(10),
        destination_number_of_rooms INT,
        destination_elevator BOOLEAN,
        destination_building_type VARCHAR(255),
        first_name VARCHAR(255),
        last_name VARCHAR(255),
        email_address VARCHAR(255),
        phone_number VARCHAR(15),
        contact_method VARCHAR(30),
        expected_moving_date Date,
        initiation_date DATETIME,
        comment VARCHAR(255),
        quote_status VARCHAR(10),
        shipment_name VARCHAR(255)
    }

    TABLE(movingcrews) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(moving_crew_id) VARCHAR(36) UNIQUE NOT NULL
        type VARCHAR(255)
        FOREIGN_KEY(shipment_id) VARCHAR(36)
    }

    TABLE(drivers) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(user_id) VARCHAR(36) UNIQUE NOT NULL
        first_name VARCHAR(255),
        last_name VARCHAR(255),
        phone_number VARCHAR(15),
        email VARCHAR(255) UNIQUE NOT NULL,
        FOREIGN_KEY(shipment_id) VARCHAR(36)
    }

    ' TABLE(shipmentreviewers) {
    '     PRIMARY_KEY(id) INT AUTO_INCREMENT
    '     FOREIGN_KEY(user_id) VARCHAR(36)
    '     firstName VARCHAR(255)
    '     lastName VARCHAR(255)
    '     email VARCHAR(255) UNIQUE NOT NULL
    '     phoneNumber VARCHAR(15)
    ' }

    TABLE(observers) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(observer_id) VARCHAR(36) UNIQUE NOT NULL
        firstName VARCHAR(255)
        lastName VARCHAR(255)
        email VARCHAR(255)
        FOREIGN_KEY(shipment_id) VARCHAR(36)
    }

    TABLE(reports) {
        PRIMARY_KEY(id) INT AUTO_INCREMENT
        FOREIGN_KEY(report_id) VARCHAR(36) UNIQUE NOT NULL
        name VARCHAR(50)
        type VARCHAR(50)
        date DATETIME
        validity DATETIME
    }

    customers ||--|{ shipments
    trucks }|--|| shipments
    addresses ||--o{ shipments : pickup_address_id
    addresses ||--o{ shipments : destination_address_id
    shipments ||--|{ movingcrews
    movingcrews ||--o| reports
    drivers }|--|| shipments
    shipments ||--o{ observers
    ' shipments ||--|{ shipmentreviewers
    drivers ||--|| trucks
    inventories ||--o{ items
    customers ||--o| reports
    shipments ||--|{ inventories
    customers ||--|{ quotes
    quotes ||--|{ shipments
    ' movingestimators ||--|{ quotes
    ' movingestimators ||--o| reports

@enduml
